Bug 1052286 nsTextStore::SetInputContext() should handle password state as editable state r=jimm