widget/nsIWidget.h
@@ -373,6 +373,11 @@ struct IMEState {
     mEnabled(aEnabled), mOpen(aOpen)
   {
   }
+
+  bool IsEditable() const
+  {
+    return mEnabled == ENABLED || mEnabled == PASSWORD;
+  }
 };
 
 struct InputContext {
